src/parser/src/RustParser.ts
// Generated from src/Rust.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { RustListener } from "./RustListener.js";
import { RustVisitor } from "./RustVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class RustParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly T__32 = 33;
    public static readonly T__33 = 34;
    public static readonly FLOAT = 35;
    public static readonly BOOL = 36;
    public static readonly STRING = 37;
    public static readonly BASETYPE = 38;
    public static readonly IDENTIFIER = 39;
    public static readonly WS = 40;
    public static readonly RULE_prog = 0;
    public static readonly RULE_mutable = 1;
    public static readonly RULE_statement = 2;
    public static readonly RULE_emptyStatement = 3;
    public static readonly RULE_item = 4;
    public static readonly RULE_letStatement = 5;
    public static readonly RULE_expressionStatement = 6;
    public static readonly RULE_expression = 7;
    public static readonly RULE_expressionWithoutBlock = 8;
    public static readonly RULE_primary = 9;
    public static readonly RULE_callExpression = 10;
    public static readonly RULE_callExpressionTerminal = 11;
    public static readonly RULE_unop = 12;
    public static readonly RULE_negationExpression = 13;
    public static readonly RULE_dereferenceExpression = 14;
    public static readonly RULE_borrowExpression = 15;
    public static readonly RULE_binopTerminals = 16;
    public static readonly RULE_binop = 17;
    public static readonly RULE_logicalOr = 18;
    public static readonly RULE_logicalAnd = 19;
    public static readonly RULE_comparison = 20;
    public static readonly RULE_additionSubstraction = 21;
    public static readonly RULE_multiplicationDivision = 22;
    public static readonly RULE_primitive = 23;
    public static readonly RULE_accessIdentifier = 24;
    public static readonly RULE_bracket = 25;
    public static readonly RULE_assignmentExpressions = 26;
    public static readonly RULE_expressionWithBlock = 27;
    public static readonly RULE_blockExpression = 28;
    public static readonly RULE_blockBody = 29;
    public static readonly RULE_ifExpression = 30;
    public static readonly RULE_ifExpressionAlternative = 31;
    public static readonly RULE_loopExpression = 32;
    public static readonly RULE_predicateLoopExpression = 33;
    public static readonly RULE_breakExpression = 34;
    public static readonly RULE_continueExpression = 35;
    public static readonly RULE_closureExpression = 36;
    public static readonly RULE_function = 37;
    public static readonly RULE_functionParameters = 38;
    public static readonly RULE_functionParam = 39;
    public static readonly RULE_functionParamPattern = 40;
    public static readonly RULE_functionReturnType = 41;
    public static readonly RULE_returnExpression = 42;
    public static readonly RULE_callParams = 43;
    public static readonly RULE_functionType = 44;
    public static readonly RULE_functionTypeParams = 45;
    public static readonly RULE_type = 46;
    public static readonly RULE_pointerType = 47;

    public static readonly literalNames = [
        null, "'mut'", "';'", "'let'", "':'", "'='", "'('", "')'", "'-'", 
        "'!'", "'*'", "'&'", "'||'", "'&&'", "'<'", "'<='", "'>'", "'>='", 
        "'=='", "'!='", "'+'", "'/'", "'%'", "'{'", "'}'", "'if'", "'else'", 
        "'while'", "'break'", "'continue'", "'|'", "'->'", "'fn'", "','", 
        "'return'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, "FLOAT", "BOOL", "STRING", "BASETYPE", "IDENTIFIER", 
        "WS"
    ];
    public static readonly ruleNames = [
        "prog", "mutable", "statement", "emptyStatement", "item", "letStatement", 
        "expressionStatement", "expression", "expressionWithoutBlock", "primary", 
        "callExpression", "callExpressionTerminal", "unop", "negationExpression", 
        "dereferenceExpression", "borrowExpression", "binopTerminals", "binop", 
        "logicalOr", "logicalAnd", "comparison", "additionSubstraction", 
        "multiplicationDivision", "primitive", "accessIdentifier", "bracket", 
        "assignmentExpressions", "expressionWithBlock", "blockExpression", 
        "blockBody", "ifExpression", "ifExpressionAlternative", "loopExpression", 
        "predicateLoopExpression", "breakExpression", "continueExpression", 
        "closureExpression", "function", "functionParameters", "functionParam", 
        "functionParamPattern", "functionReturnType", "returnExpression", 
        "callParams", "functionType", "functionTypeParams", "type", "pointerType",
    ];

    public get grammarFileName(): string { return "Rust.g4"; }
    public get literalNames(): (string | null)[] { return RustParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return RustParser.symbolicNames; }
    public get ruleNames(): string[] { return RustParser.ruleNames; }
    public get serializedATN(): number[] { return RustParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, RustParser._ATN, RustParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public prog(): ProgContext {
        let localContext = new ProgContext(this.context, this.state);
        this.enterRule(localContext, 0, RustParser.RULE_prog);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 99;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2055216972) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 189) !== 0)) {
                {
                {
                this.state = 96;
                this.statement();
                }
                }
                this.state = 101;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 102;
            this.match(RustParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public mutable(): MutableContext {
        let localContext = new MutableContext(this.context, this.state);
        this.enterRule(localContext, 2, RustParser.RULE_mutable);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 104;
            this.match(RustParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 4, RustParser.RULE_statement);
        try {
            this.state = 110;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case RustParser.T__1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 106;
                this.emptyStatement();
                }
                break;
            case RustParser.T__31:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 107;
                this.item();
                }
                break;
            case RustParser.T__2:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 108;
                this.letStatement();
                }
                break;
            case RustParser.T__5:
            case RustParser.T__7:
            case RustParser.T__8:
            case RustParser.T__9:
            case RustParser.T__10:
            case RustParser.T__11:
            case RustParser.T__22:
            case RustParser.T__24:
            case RustParser.T__26:
            case RustParser.T__27:
            case RustParser.T__28:
            case RustParser.T__29:
            case RustParser.T__33:
            case RustParser.FLOAT:
            case RustParser.BOOL:
            case RustParser.STRING:
            case RustParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 109;
                this.expressionStatement();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public emptyStatement(): EmptyStatementContext {
        let localContext = new EmptyStatementContext(this.context, this.state);
        this.enterRule(localContext, 6, RustParser.RULE_emptyStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 112;
            this.match(RustParser.T__1);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public item(): ItemContext {
        let localContext = new ItemContext(this.context, this.state);
        this.enterRule(localContext, 8, RustParser.RULE_item);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 114;
            this.function_();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStatement(): LetStatementContext {
        let localContext = new LetStatementContext(this.context, this.state);
        this.enterRule(localContext, 10, RustParser.RULE_letStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 116;
            this.match(RustParser.T__2);
            this.state = 118;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1) {
                {
                this.state = 117;
                this.mutable();
                }
            }

            this.state = 120;
            this.match(RustParser.IDENTIFIER);
            this.state = 123;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 4) {
                {
                this.state = 121;
                this.match(RustParser.T__3);
                this.state = 122;
                this.type_();
                }
            }

            this.state = 127;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 5) {
                {
                this.state = 125;
                this.match(RustParser.T__4);
                this.state = 126;
                this.expression();
                }
            }

            this.state = 129;
            this.match(RustParser.T__1);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expressionStatement(): ExpressionStatementContext {
        let localContext = new ExpressionStatementContext(this.context, this.state);
        this.enterRule(localContext, 12, RustParser.RULE_expressionStatement);
        try {
            this.state = 138;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 131;
                this.expressionWithBlock();
                this.state = 133;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
                case 1:
                    {
                    this.state = 132;
                    this.match(RustParser.T__1);
                    }
                    break;
                }
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 135;
                this.expressionWithoutBlock();
                this.state = 136;
                this.match(RustParser.T__1);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expression(): ExpressionContext {
        let localContext = new ExpressionContext(this.context, this.state);
        this.enterRule(localContext, 14, RustParser.RULE_expression);
        try {
            this.state = 142;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 140;
                this.expressionWithBlock();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 141;
                this.expressionWithoutBlock();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expressionWithoutBlock(): ExpressionWithoutBlockContext {
        let localContext = new ExpressionWithoutBlockContext(this.context, this.state);
        this.enterRule(localContext, 16, RustParser.RULE_expressionWithoutBlock);
        try {
            this.state = 148;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case RustParser.T__5:
            case RustParser.T__7:
            case RustParser.T__8:
            case RustParser.T__9:
            case RustParser.T__10:
            case RustParser.T__11:
            case RustParser.T__22:
            case RustParser.T__24:
            case RustParser.T__26:
            case RustParser.T__29:
            case RustParser.FLOAT:
            case RustParser.BOOL:
            case RustParser.STRING:
            case RustParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 144;
                this.binop();
                }
                break;
            case RustParser.T__27:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 145;
                this.breakExpression();
                }
                break;
            case RustParser.T__28:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 146;
                this.continueExpression();
                }
                break;
            case RustParser.T__33:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 147;
                this.returnExpression();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public primary(): PrimaryContext {
        let localContext = new PrimaryContext(this.context, this.state);
        this.enterRule(localContext, 18, RustParser.RULE_primary);
        try {
            this.state = 157;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 150;
                this.primitive();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 151;
                this.bracket();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 152;
                this.accessIdentifier();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 153;
                this.unop();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 154;
                this.assignmentExpressions();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 155;
                this.closureExpression();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 156;
                this.callExpression(0);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public callExpression(): CallExpressionContext;
    public callExpression(_p: number): CallExpressionContext;
    public callExpression(_p?: number): CallExpressionContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new CallExpressionContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 20;
        this.enterRecursionRule(localContext, 20, RustParser.RULE_callExpression, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            {
            this.state = 160;
            this.callExpressionTerminal();
            this.state = 161;
            this.match(RustParser.T__5);
            this.state = 163;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2055216960) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 47) !== 0)) {
                {
                this.state = 162;
                this.callParams();
                }
            }

            this.state = 165;
            this.match(RustParser.T__6);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 175;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 12, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new CallExpressionContext(parentContext, parentState);
                    this.pushNewRecursionContext(localContext, _startState, RustParser.RULE_callExpression);
                    this.state = 167;
                    if (!(this.precpred(this.context, 2))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                    }
                    this.state = 168;
                    this.match(RustParser.T__5);
                    this.state = 170;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2055216960) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 47) !== 0)) {
                        {
                        this.state = 169;
                        this.callParams();
                        }
                    }

                    this.state = 172;
                    this.match(RustParser.T__6);
                    }
                    }
                }
                this.state = 177;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 12, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public callExpressionTerminal(): CallExpressionTerminalContext {
        let localContext = new CallExpressionTerminalContext(this.context, this.state);
        this.enterRule(localContext, 22, RustParser.RULE_callExpressionTerminal);
        try {
            this.state = 181;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case RustParser.T__5:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 178;
                this.bracket();
                }
                break;
            case RustParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 179;
                this.accessIdentifier();
                }
                break;
            case RustParser.T__22:
            case RustParser.T__24:
            case RustParser.T__26:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 180;
                this.expressionWithBlock();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public unop(): UnopContext {
        let localContext = new UnopContext(this.context, this.state);
        this.enterRule(localContext, 24, RustParser.RULE_unop);
        try {
            this.state = 186;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case RustParser.T__7:
            case RustParser.T__8:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 183;
                this.negationExpression();
                }
                break;
            case RustParser.T__9:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 184;
                this.dereferenceExpression();
                }
                break;
            case RustParser.T__10:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 185;
                this.borrowExpression();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public negationExpression(): NegationExpressionContext {
        let localContext = new NegationExpressionContext(this.context, this.state);
        this.enterRule(localContext, 26, RustParser.RULE_negationExpression);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 188;
            localContext._op = this.tokenStream.LT(1);
            _la = this.tokenStream.LA(1);
            if(!(_la === 8 || _la === 9)) {
                localContext._op = this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 189;
            this.binopTerminals();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public dereferenceExpression(): DereferenceExpressionContext {
        let localContext = new DereferenceExpressionContext(this.context, this.state);
        this.enterRule(localContext, 28, RustParser.RULE_dereferenceExpression);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 191;
            this.match(RustParser.T__9);
            this.state = 194;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case RustParser.T__9:
                {
                this.state = 192;
                this.dereferenceExpression();
                }
                break;
            case RustParser.IDENTIFIER:
                {
                this.state = 193;
                this.accessIdentifier();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public borrowExpression(): BorrowExpressionContext {
        let localContext = new BorrowExpressionContext(this.context, this.state);
        this.enterRule(localContext, 30, RustParser.RULE_borrowExpression);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 196;
            this.match(RustParser.T__10);
            this.state = 198;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1) {
                {
                this.state = 197;
                this.mutable();
                }
            }
